--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Sistema de Disponibilidades" />
+  <meta property="og:description" content="Consulta de disponibilidade de lotes em tempo real." />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <title>Sistema de Disponibilidades</title>
 </head>
 
